--- a/src/layout/headers/ui-header/ui-header.pug
+++ b/src/layout/headers/ui-header/ui-header.pug
@@ -3,7 +3,7 @@ include ../../../blocks/button/button
 div.ui-header-wrapper
  header.ui-header
   a.ui-header-logo(href="landing.html")
-   img.logo(src='//assets/img/logo.svg')
+   img.logo(src='/assets/img/logo.svg')
   nav.ui-header-nav
    ul.ui-header-nav-list
     li.ui-header-nav-item
