--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -279,7 +279,7 @@ block content
     })
     +wrapper({marginBottom: '20'})
       +description({
-        url:'assets/img/cadr.png',
+        url:'/assets/img/cadr.png',
         accentedText: 'Мурад Сарафанов',
         regularText: '5 дней назад'}, true)
     +wrapper({marginBottom:40})
