--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,5 +1,5 @@
 .landing-page {
-  background-image: url("assets/img/landing1.jpg");
+  background-image: url("/assets/img/landing1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   //margin-bottom: 100px;
