--- a/src/layout/cards/cards.pug
+++ b/src/layout/cards/cards.pug
@@ -6,10 +6,10 @@ mixin card({rate, linkToRoom, image1, image2, image3, image4, review, room, lux,
   article.card
     .card-img-wrapper
       .slick
-        img(src=(`assets/img/${image1}`), alt="apartment photo")
-        img(src=(`assets/img/${image2}`), alt="apartment photo")
-        img(src=(`assets/img/${image3}`), alt="apartment photo")
-        img(src=(`assets/img/${image4}`), alt="apartment photo")
+        img(src=(`/assets/img/${image1}`), alt="apartment photo")
+        img(src=(`/assets/img/${image2}`), alt="apartment photo")
+        img(src=(`/assets/img/${image3}`), alt="apartment photo")
+        img(src=(`/assets/img/${image4}`), alt="apartment photo")
 
     .card-description
       .card-desription-item.card-desription-item-col1 #[span.card-title= room] #[span.lux= lux ? 'люкс' : '']
