--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -2,6 +2,6 @@
   background-image: url("/assets/img/landing1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  //margin-bottom: 100px;
   max-width: 100%;
+  //height: 500px;
 }
