--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -127,7 +127,7 @@ label:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #ffffff;
+  background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
@@ -206,3 +206,7 @@ label:focus {
 //  width: 100%;
 //  margin-bottom: 20px;
 //}
+.pages-footer-wrapper-on-main {
+  margin-top: -550px;
+  //background-color: #00adee;
+}
