--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,7 +1,12 @@
 .landing-page {
   background-image: url("/assets/img/landing1.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  //margin-bottom: 100px;
   max-width: 100%;
-  //height: 500px;
+  //max-height: 900px;
+}
+.landing-page_search-form-wrapper {
+  margin-top: 50px;
+  margin-left: 600px;
 }
